@@ -1,1 +1,1 @@
-10.0.0-rc3
+10.0.0
